app/components/NetworkConfigurationTooltip/NetworkConfigurationTooltip.scss
.tooltipContainer {
  padding: 0 12px;
  display: flex;
  flex-direction: column;
  width: 400px;
  height: 360px;

  span {
    text-align: left;
  }

  label {
    color: #8d98ae;
  }
}

.addressLink {
  font-size: 12px;
}

.configLabel {
  font-family: var(--font-gotham-bold);
  font-size: 12px;
  color: #8d98ae;
}

.tooltipItemBorder {
  border-bottom: 1px solid #8d98ae;
  opacity: 0.3;
}

.addressInfo {
  display: flex;
  width: 100%;
  flex-direction: column;
  align-items: baseline;
  margin: 6px 0;

  span {
    font-size: 12px;
  }
}

.publicKeyInfo {
  display: flex;
  width: 100%;
  flex-direction: column;
  align-items: baseline;
  margin: 6px 0 ;
  opacity: 0.3;

  span {
    font-size: 12px;
  }
}

.publicKey {
  font-size: 9px;
  word-break: break-word;
}

.votedNodeInfo {
  display: flex;
  width: 100%;
  flex-direction: column;
  align-items: baseline;
  margin: 6px 0 ;

  span {
    font-size: 12px;
  }
}

.votedNode {
  font-size: 12px;
}

.buttonContainer {
  display: flex;
  justify-content: center;
  margin: 18px 0 6px 0;

  button {
    width: 250px;

    span {
      text-align: center;
    }
  }
}

.warningIcon {
  path {
    fill: #d355e7;
  }
}

